--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,8 @@
 @import 'variables';
 @import 'reset';
 @import 'navbar';
-@import 'main-section';
 @import 'footer';
+@import 'responsive';
+@import 'main';
 
 
